<resources>
    <string name="app_name">CashUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_transferencias">Transferencias</string>
    <string name="menu_inicio">Inicio</string>

    <string name="username">Roberto Romero Monge</string>
    <string name="accountIBAN">ES1077934818956681946052</string>
    <string name="accountNumber">4112   8795    3245    7494</string>
    <string name="version">0.0.1</string>

    <string name="inicSes">Iniciar Sesión</string>
    <string name="register">Registrarse</string>

    <string name="EditText1">Dinero a enviar</string>
    <string name="EditText2">Iban destinatario</string>
    <string name="title_activity_settings">Settings</string>

    <string name="saldo">3245</string>

    <!-- Ajustes de usuario-->
    <string name="cambiarContrasena">Cambiar contraseña</string>
    <string name="ajustesCuenta">Ajustes de Cuenta</string>
    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="acercade_header">Acerca de</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>