<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio"
            android:visible="false"/>
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_balance" />
        <item
            android:id="@+id/nav_transferencias"
            android:icon="@drawable/ic_baseline_payments_24"
            android:title="@string/menu_transferencias" />
    </group>
</menu>